--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
 	"type" : "git",
 	"url" : "https://github.com/JoshNeely/BattleSnake"
   },
-  "dependencies": {
+  "dependencies" : {
     "express": "^4.10.2",
     "socket.io": "^1.3.7"
+  },
+  "scripts" : {
+    "start" : "node ./source/server.js echo test"
   },
   "license": "MIT"
 }
