--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "description": "Simple socket.io take on the classic Snake game",
   "author": "Joshua Neely joshua.a.neely@gmail.com",
   "repository" : {
-	"type" : "git",
-	"url" : "https://github.com/JoshNeely/BattleSnake"
+    "type" : "git",
+    "url" : "https://github.com/JoshuaNeely/BattleSnake"
+  },
+  "devDependencies": {
+    "bower": "^1.7.7"
   },
   "dependencies" : {
     "express": "^4.10.2",
     "socket.io": "^1.3.7"
   },
   "scripts" : {
+    "postinstall": "bower install",
+    
+    "prestart": "npm install",
     "start" : "node ./source/server.js echo test"
   },
   "license": "MIT"
