--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
-
 {
   "name": "battle-snake",
   "version": "0.0.1",
   "description": "Simple socket.io take on the classic Snake game",
   "author": "Joshua Neely joshua.a.neely@gmail.com",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/JoshuaNeely/BattleSnake"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JoshuaNeely/BattleSnake"
   },
   "devDependencies": {
     "bower": "^1.7.7"
   },
-  "dependencies" : {
+  "dependencies": {
     "express": "^4.10.2",
     "socket.io": "^1.3.7"
   },
-  "scripts" : {
+  "scripts": {
     "postinstall": "bower install",
-        
-    "start" : "node ./source/server.js"
+    "start": "node ./src/server.js"
   },
   "license": "MIT"
 }
